# vibe-brainstorm

./: .dockerignore  .env.example  .gitignore  DESIGN.md  LICENSE  README.en.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  providers.yaml  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  permissions.py  realtime.py  schemas.py
backend/app/api/: routes_admin.py  routes_auth.py  routes_brainstorm.py  routes_config.py  routes_graph.py  routes_images.py  routes_projects.py  routes_share.py  routes_ws.py
backend/app/llm/: __init__.py  base.py  image.py  json_stream.py  openai_compatible.py  registry.py
backend/app/prompts/: __init__.py
backend/app/prompts/modes/: art.yaml  general.yaml  project.yaml  screenplay.yaml
backend/app/services/: __init__.py  brainstorm.py  context.py  export_docx.py  history.py  image_events.py  image_layout.py  image_media.py  image_references.py  image_upload.py  imagegen.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_brainstorm.py  test_config.py  test_context.py  test_documents.py  test_history_export.py  test_history_restore.py  test_image_upload.py  test_images.py  test_json_stream.py  test_permissions.py  test_presence.py  test_realtime.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts  types.ts
frontend/src/admin/: AdminApp.tsx  ProviderForm.tsx  ProviderTable.tsx  admin.css  adminApi.ts
frontend/src/api/: auth.ts  brainstorm.ts  client.ts  (+4 more)
(+38 files in other folders)
